--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,18 +26,20 @@ importFrom(nnet, nnet)
 #S3method(fnenvir, default)
 #S3method(fnenvir, data.frame)
 S3method(plot, gamlssNP)
-S3method(terms, gamlssMX)
-S3method(fitted, gamlssMX)
 S3method(fitted, gamlssNP)
-S3method(coef, gamlssMX)
-S3method(model.matrix, gamlssMX)
-S3method(formula, gamlssMX)
-S3method(print, gamlssMX)
 S3method(print, gamlssNP)
 S3method(family, gamlssNP)
+S3method(residuals, gamlssNP)
+#-----
+S3method(print, gamlssMX)
+S3method(model.matrix, gamlssMX)
+S3method(formula, gamlssMX)
+S3method(coef, gamlssMX)
+S3method(predict, gamlssMX)
+S3method(terms, gamlssMX)
+S3method(fitted, gamlssMX)
 S3method(residuals, gamlssMX)
-
-
+S3method(update, gamlssMX)
 #S3method(addterm, gamlss)
 #S3method(dropterm, gamlss)
 #S3method(model.frame, gamlss)
