--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: gamlss.mx
 Type: Package
-Title: A GAMLSS add on package for fitting mixtute distributions
-Version: 1.7-0
-Date: 2007-10-02
+Title: A GAMLSS add on package for fitting mixture distributions
+Version: 1.9-0
+Date:  2008-06-05
 Author: Mikis Stasinopoulos <d.stasinopoulos@londonmet.ac.uk>, Bob Rigby <r.rigby@londonmet.ac.uk>
 Maintainer: Mikis Stasinopoulos <d.stasinopoulos@londonmet.ac.uk>
 LazyLoad: yes
@@ -10,4 +10,4 @@ Depends: R (>= 2.2.1), gamlss, nnet, MASS
 Description: The main purpose of this package is to allow fitting of mixture distributions with GAMLSS models.
 License: GPL-2 | GPL-3
 URL: http://www.gamlss.com/
-Packaged: Tue Oct  2 22:30:39 2007; stasinom
+Packaged: Thu Jun  5 15:55:26 2008; stasinom
