--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,17 @@
 Package: gamlss.mx
 Type: Package
 Title: A GAMLSS add on package for fitting mixture distributions
-Version: 1.9-0
-Date:  2008-06-05
-Author: Mikis Stasinopoulos <d.stasinopoulos@londonmet.ac.uk>, Bob Rigby <r.rigby@londonmet.ac.uk>
+Version: 2.0-0
+Date: 2009-04-02
+Author: Mikis Stasinopoulos <d.stasinopoulos@londonmet.ac.uk>, Bob
+        Rigby <r.rigby@londonmet.ac.uk>
 Maintainer: Mikis Stasinopoulos <d.stasinopoulos@londonmet.ac.uk>
 LazyLoad: yes
 Depends: R (>= 2.2.1), gamlss, nnet, MASS
-Description: The main purpose of this package is to allow fitting of mixture distributions with GAMLSS models.
+Description: The main purpose of this package is to allow fitting of
+        mixture distributions with GAMLSS models.
 License: GPL-2 | GPL-3
 URL: http://www.gamlss.com/
-Packaged: Thu Jun  5 15:55:26 2008; stasinom
+Packaged: Thu Apr 2 21:37:08 2009; stasinom
+Repository: CRAN
+Date/Publication: 2009-04-03 09:42:27
