--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: gamlss.mx
 Type: Package
 Title: A GAMLSS add on package for fitting mixture distributions
-Version: 4.1-0
-Date: 2012-02-21
+Version: 4.2-7
+Date: 2013-01-11
 Author: Mikis Stasinopoulos <d.stasinopoulos@londonmet.ac.uk>, Bob
         Rigby <r.rigby@londonmet.ac.uk>
 Maintainer: Mikis Stasinopoulos <d.stasinopoulos@londonmet.ac.uk>
@@ -12,6 +12,7 @@ Description: The main purpose of this package is to allow fitting of
         mixture distributions with GAMLSS models.
 License: GPL-2 | GPL-3
 URL: http://www.gamlss.org/
-Packaged: 2012-02-21 10:17:51 UTC; stasinom
+Packaged: 2014-01-18 11:51:35 UTC; stasinom
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-02-21 10:40:50
+Date/Publication: 2014-01-18 14:35:00
