--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,19 @@
 Package: gamlss.mx
 Type: Package
-Title: A GAMLSS add on package for fitting mixture distributions
-Version: 4.2-7
-Date: 2013-01-11
+Title: A GAMLSS Add-on Package For Fitting Mixture Distributions
+Version: 4.3-1
+Date: 2015-02-04
 Author: Mikis Stasinopoulos <d.stasinopoulos@londonmet.ac.uk>, Bob
         Rigby <r.rigby@londonmet.ac.uk>
 Maintainer: Mikis Stasinopoulos <d.stasinopoulos@londonmet.ac.uk>
 LazyLoad: yes
-Depends: R (>= 2.2.1), gamlss, nnet, MASS
+Depends: R (>= 2.2.1), gamlss.dist, gamlss, nnet
+Suggests: MASS
 Description: The main purpose of this package is to allow fitting of
         mixture distributions with GAMLSS models.
 License: GPL-2 | GPL-3
 URL: http://www.gamlss.org/
-Packaged: 2014-01-18 11:51:35 UTC; stasinom
+Packaged: 2015-02-04 08:39:28 UTC; stasinom
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-01-18 14:35:00
+Date/Publication: 2015-02-04 10:35:04
