--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,10 @@ export(gamlssMX, MX.control, gamlssMXfits,
 # datasets #export(lange)
 
 importFrom(stats,  family, fitted)
-importFrom(nnet, nnet)
-importFrom(gamlss, .gamlss.bi.list)
-importFrom(gamlss)
-importFrom(MASS)
+importFrom(nnet, nnet, multinom)
+importFrom(gamlss.dist, as.gamlss.family, NO)
+import(gamlss)
+#importFrom(MASS)
 # needed for gamlss family
 #export(as.family, gamlss.family, gamlss.family.default, as.gamlss.family)
 
