--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,19 @@
 Package: gamlss.mx
 Type: Package
-Title: A GAMLSS Add-on Package For Fitting Mixture Distributions
-Version: 4.3-1
-Date: 2015-02-04
+Title: Fitting Mixture Distributions with GAMLSS
+Version: 4.3-2
+Date: 2015-07-28
 Author: Mikis Stasinopoulos <d.stasinopoulos@londonmet.ac.uk>, Bob
         Rigby <r.rigby@londonmet.ac.uk>
 Maintainer: Mikis Stasinopoulos <d.stasinopoulos@londonmet.ac.uk>
 LazyLoad: yes
-Depends: R (>= 2.2.1), gamlss.dist, gamlss, nnet
+Depends: R (>= 2.2.1), gamlss.dist, gamlss, nnet, stats, graphics
 Suggests: MASS
 Description: The main purpose of this package is to allow fitting of
         mixture distributions with GAMLSS models.
 License: GPL-2 | GPL-3
 URL: http://www.gamlss.org/
-Packaged: 2015-02-04 08:39:28 UTC; stasinom
 NeedsCompilation: no
+Packaged: 2015-07-28 08:48:46 UTC; stasinom
 Repository: CRAN
-Date/Publication: 2015-02-04 10:35:04
+Date/Publication: 2015-07-28 12:02:03
